Bug 140567 - Unwanted selection of outline content visibility button
Summary: Unwanted selection of outline content visibility button
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-20 19:21 UTC by Petr Valach
Modified: 2023-02-26 15:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Valach 2021-02-20 19:21:35 UTC
Description:
Outline content visibility button is selected if cursor is in headline. It makes difficulties.

Steps to Reproduce:
1. Open LibreOffice Writer Option dialog and check Expert Mode and Outline folding mode.
2. Type some headline(s) on page.
3. Insert cursor in the headline.
4. Press Enter.

Actual Results:
Outline content visibility button is selected. Pressing Enter button toggles between outline content visibility button states. Just annoying.

Expected Results:
Outline content visibility button is never selected. To toggle between its states user must click on this button.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 7.1.0.3 / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 1 Jim Raykowski 2021-02-23 03:47:13 UTC
Hi Petr,

Sounds like a good suggestion.

Here is a patch to make the focus not change to the outline content visibility hide button when it is shown by placing the mouse pointer over an outline frame.

https://gerrit.libreoffice.org/c/core/+/111367
Comment 2 Commit Notification 2021-02-24 17:34:56 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d6ec1b1f794311c9c8718037dcfd7b0b61ad275

tdf#140567 don't grab focus to outline content visibility button

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 QA Administrators 2023-02-25 03:24:04 UTC Comment hidden (noise)
Comment 4 Petr Valach 2023-02-26 15:02:19 UTC
Not occurs in LibreOffice 7.5. Problem is fixed.

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: cs-CZ (cs_CZ.UTF-8); UI: cs-CZ
Calc: threaded