tdf#140567 don't grab focus to outline content visibility button

when pointer is on an outline frame.

Change-Id: I9a9d406340a88c24f959445b570ab1f02dffbef8